--- a/css/style.scss
+++ b/css/style.scss
@@ -97,10 +97,10 @@ $lg-breakpoint: 991px; //Large
 $xl-breakpoint: 1200px; //Extra large
 $xxl-breakpoint: 1400px; //Extra extra large
 $colors: (
-    red: #99c4cc,
-    yellow: #ca99cc,
-    olive: #a6cc99,
-    green: #cc9999
+    color1: #99c4cc,
+    color2: #ca99cc,
+    color3: #a6cc99,
+    color4: #cc9999
 );
 :root {
     --color-white: #fff;
