--- a/css/style.scss
+++ b/css/style.scss
@@ -106,6 +106,65 @@ $colors: (
     --color-white: #fff;
     --color-black: #000;
     --color-gray: #666;
+    --bg-color: #fbfbfb;
+}
+
+#menu-area:not(.mm-menu):not(.mm) {
+    display: none;
+}
+
+#header {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    z-index: 10;
+    height: 50px;
+    font-size: 18px;
+    font-weight: 400;
+    color: #fff;
+    background: var(--bg-color);
+    .fa-bars {
+        color: var(--color-black);
+    }
+}
+#header a {
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    position: absolute;
+    top: 0;
+    left: 10px;
+    width: 50px;
+    height: 50px;
+    text-decoration: none;
+}
+#header a[href="#menu-area"] {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+}
+.mm-wrapper--opened #header a[href="#menu-area"] {
+    display: none;
+}
+#header a[href="#page"] {
+    display: none;
+}
+.mm-wrapper--opened #header a[href="#page"] {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
 }
 
 .products {
@@ -206,6 +265,7 @@ $colors: (
                 font-weight: 900;
                 line-height: normal;
                 text-transform: capitalize;
+                border: none;
                 border-bottom: 1px solid var(--color-black);
                 padding: 0;
                 padding-bottom: 0.2rem;
@@ -227,7 +287,8 @@ $colors: (
         .slider-area {
             position: relative;
             .swiper-button-next,
-            .swiper-rtl .swiper-button-prev, .swiper-button-prev,
+            .swiper-rtl .swiper-button-prev,
+            .swiper-button-prev,
             .swiper-rtl .swiper-button-next {
                 right: 70px !important;
                 border: 1px solid #0000005d;
@@ -254,16 +315,14 @@ $colors: (
                     background-position: center;
                     height: 100%;
                     width: 100%;
-                    
                 }
             }
             .swiper-button-prev,
             .swiper-rtl .swiper-button-next {
-              
                 transform: rotate(180deg);
-              
             }
-            .swiper-button-next.swiper-button-disabled, .swiper-button-prev.swiper-button-disabled{
+            .swiper-button-next.swiper-button-disabled,
+            .swiper-button-prev.swiper-button-disabled {
                 opacity: 0;
             }
 
@@ -326,8 +385,17 @@ $colors: (
                                 font-weight: 500;
                                 line-height: 160%; /* 20.48px */
                             }
+                            .form-group {
+                                margin-right: 0.2rem;
+                                &:last-child {
+                                    margin-right: 0.2rem;
+                                }
+                            }
                             input[type="radio"] {
-                                display: none;
+                                position: absolute;
+                                opacity: 0;
+                                cursor: pointer;
+
                                 &:checked + label {
                                     border: 1px solid var(--color-black);
                                 }
@@ -360,6 +428,40 @@ $colors: (
                             }
                         }
                     }
+                }
+            }
+        }
+    }
+}
+footer {
+    padding: 6rem 3rem 5rem 3rem;
+    background-color: var(--bg-color);
+    @media screen and (max-width: $sm-breakpoint) {
+        padding: 3rem 2rem 2rem 2rem;
+    }
+    .accordion {
+        padding: 0rem 1rem;
+        @media screen and (max-width: $sm-breakpoint) {
+            margin-bottom: 1rem;
+            padding: 0rem;
+        }
+        .accordion-title {
+            cursor: pointer;
+            color: var(--color-black);
+            font-size: 1.2rem;
+            font-weight: 600;
+            display: flex;
+            justify-content: space-between;
+            @media screen and (max-width: $sm-breakpoint) {
+                font-size: 1rem;
+            }
+        }
+        .accordion-content {
+            display: none;
+            p {
+                font-size: 1rem;
+                @media screen and (max-width: 1550px) {
+                    font-size: 0.9rem;
                 }
             }
         }
